# web-api-example

./: .dockerignore  .env  .env-example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  compose.yml  pyproject.toml  requirements.txt
app/: Dockerfile  config.py  crud.py  db.py  deps.py  extractor.py  main.py  models.py  pyproject.toml  requirements.txt  routes.py  sec.py  utils.py
app/alembic/: env.py
app/alembic/versions/: 184071632cb8_.py  2bea28140b82_.py  c6ab3a3a84e2_.py
app/migrations/: env.py
app/migrations/versions/: 07ba036fc246_.py  a902b2e85586_.py  c04ff852ea85_.py
app/routes/: __init__.py  development.py  login.py  users.py
app/routes/v1/: __init__.py  login.py  metadata.py  user.py
app/tests/: conftest.py  test_routes.py  test_sec.py  test_utils.py  utils.py
app/tests/routes/: test_development.py  test_login.py  test_users.py
backend/: .dockerignore  Dockerfile  alembic.ini  config.py  extractor.py  models.py  pyproject.toml  requirements.txt  routes.py
backend/app/: config.py  crud.py  db.py  deps.py  main.py  models.py  schemas.py  sec.py  seed.py  utils.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 235a756c3ee0_.py  e942dfbdbd86_.py
backend/app/api/: login.py  users.py
backend/app/core/: configuration.py  database.py  dependencies.py  models.py  schemas.py  security.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: a902b2e85586_.py
backend/app/routes/: __init__.py  development.py  login.py  users.py
backend/app/routes/v1/: __init__.py  items.py  login.py  metadata.py  private.py  (+3 more)
backend/app/tests/: conftest.py
backend/migrations/: env.py
backend/migrations/versions/: a902b2e85586_.py  c04ff852ea85_.py  d087955a0ff2_.py
backend/scripts/: test.sh
backend/tests/: conftest.py  test_api.py  test_items.py  test_login.py  test_metadata.py  test_private.py  test_routes.py  test_users.py  test_utils.py  utils.py
backend/tests/routes/: test_development.py
(+26 files in other folders)
