[project]
name = "web-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10.6",
    "fastapi>=0.115.8",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
]

[tool.ruff]
line-length=79

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = ["F401"]
