[project]
name = "web-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.8",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
]

[tool.ruff]
line-length=79

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = ["F401"]
