[project]
name = "app"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "fastapi[standard]>=0.115.8",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pillow>=11.1.0",
    "pydantic-settings>=2.8.0",
    "pydantic>=2.10.6",
    "python-multipart>=0.0.20",
    "trio>=0.29.0",
    "argon2-cffi>=23.1.0",
    "pyjwt>=2.10.1",
    "sqlmodel>=0.0.23",
    "alembic>=1.14.1",
    "slowapi>=0.1.9",
    "psycopg[binary,pool]>=3.2.5",
]

[dependency-groups]
dev = [
    "isort>=6.0.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
]

[tool.ruff]
line-length=79

[tool.ruff.lint]
fixable = ["ALL"]
ignore = ["E402"]
